--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -20,15 +20,16 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="200dp"
-                android:src="@mipmap/ic_launcher_round"
-                android:layout_gravity="center"/>
+                android:layout_gravity="center"
+                android:src="@drawable/logo"
+                android:layout_marginTop="20dp"/>
+
             <EditText
                 android:layout_width="300dp"
                 android:layout_height="60dp"
                 android:id="@+id/username_login"
                 android:layout_gravity="center"
                 android:hint="@string/username"
-                android:layout_marginTop="30dp"
                 android:drawableStart="@drawable/person"
                 android:padding="8dp"
                 android:background="@drawable/edit"
