--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -20,7 +20,8 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="200dp"
-                android:src="@mipmap/ic_launcher_round"
+                android:src="@drawable/logo"
+                android:layout_marginTop="20sp"
                 android:layout_gravity="center"/>
             <EditText
                 android:layout_width="300dp"
@@ -28,7 +29,6 @@
                 android:id="@+id/username_signup"
                 android:layout_gravity="center"
                 android:hint="@string/e_mail"
-                android:layout_marginTop="30dp"
                 android:drawableStart="@drawable/person"
                 android:padding="8dp"
                 android:background="@drawable/edit"
