--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -9,23 +9,23 @@
     android:background="@color/white">
 
 
-    <android.support.v7.widget.CardView
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:elevation="12dp"
-        android:id="@+id/view2"
-        app:cardCornerRadius="40dp"
-        android:layout_centerHorizontal="true"
-        android:innerRadius="0dp"
-        android:shape="ring"
-        android:thicknessRatio="1.9">
-        <ImageView
-            android:layout_height="80dp"
-            android:layout_width="match_parent"
-            android:id="@+id/imageView1"
-            android:src="@mipmap/ic_launcher_round"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true">
-        </ImageView>
-    </android.support.v7.widget.CardView>
+<!--    <android.support.v7.widget.CardView-->
+<!--        android:layout_width="80dp"-->
+<!--        android:layout_height="80dp"-->
+<!--        android:elevation="12dp"-->
+<!--        android:id="@+id/view2"-->
+<!--        app:cardCornerRadius="40dp"-->
+<!--        android:layout_centerHorizontal="true"-->
+<!--        android:innerRadius="0dp"-->
+<!--        android:shape="ring"-->
+<!--        android:thicknessRatio="1.9">-->
+<!--        <ImageView-->
+<!--            android:layout_height="80dp"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:id="@+id/imageView1"-->
+<!--            android:src="@mipmap/ic_launcher_round"-->
+<!--            android:layout_alignParentTop="true"-->
+<!--            android:layout_centerHorizontal="true">-->
+<!--        </ImageView>-->
+<!--    </android.support.v7.widget.CardView>-->
 </androidx.constraintlayout.widget.ConstraintLayout>
