--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -13,6 +13,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingStart="30dp"
+        android:src="@mipmap/ic_launcher_round"
+
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -126,6 +128,8 @@
         android:hint="@string/places"
         android:padding="8dp"
         android:paddingStart="30dp"
+        android:onClick="get_places"
+        android:clickable="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
