--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -6,4 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".Map">
 
+    <fragment
+        android:id="@+id/google_map"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:name= "com.google.android.gms.maps.SupportMapFragment"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
