--- a/app/src/main/res/layout/dialog_fragment.xml
+++ b/app/src/main/res/layout/dialog_fragment.xml
@@ -32,13 +32,22 @@
         android:textColor="@color/lav1"
         android:textSize="30sp" />
 
-    <TextView
+    <EditText
+        android:id="@+id/time_et"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:layout_gravity="center"
+        android:inputType="time" />
+    <Button
         android:id="@+id/tv_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:text="@string/personal_info"
-        android:textColor="@color/lav1"
+        android:textColor="@color/white"
+        android:text="@string/add_time"
         android:textSize="20sp"
         />
+
+
 </LinearLayout>
