--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -23,9 +23,18 @@
                 android:src="@drawable/logo"
                 android:layout_marginTop="20sp"
                 android:layout_gravity="center"/>
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textColor="#FF0000"
+                android:alpha="0.5"
+                android:gravity="center"/>
             <EditText
                 android:layout_width="300dp"
                 android:layout_height="60dp"
+                android:layout_marginTop="20sp"
                 android:id="@+id/username_signup"
                 android:layout_gravity="center"
                 android:hint="@string/e_mail"
@@ -66,6 +75,8 @@
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:cornerRadius="30dp"/>
+
+
 
         </LinearLayout>
     </LinearLayout>
