--- a/app/src/main/res/layout/dialog_fragment.xml
+++ b/app/src/main/res/layout/dialog_fragment.xml
@@ -39,14 +39,16 @@
         android:ems="10"
         android:layout_gravity="center"
         android:inputType="time" />
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/tv_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:textColor="@color/white"
         android:text="@string/add_time"
+        android:textColorHint="@color/lav1"
         android:textSize="20sp"
+        android:background="@color/lav1"
         />
 
 
