--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -24,6 +24,15 @@
                 android:src="@drawable/logo"
                 android:layout_marginTop="20dp"/>
 
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/wrong"
+                android:gravity="center"
+                android:textColor="#FF0000"
+                android:alpha="0.5"
+                />
             <EditText
                 android:layout_width="300dp"
                 android:layout_height="60dp"
@@ -33,7 +42,8 @@
                 android:drawableStart="@drawable/person"
                 android:padding="8dp"
                 android:background="@drawable/edit"
-                android:drawablePadding="8dp"/>
+                android:drawablePadding="8dp"
+                android:layout_marginTop="20sp"/>
             <EditText
                 android:layout_width="300dp"
                 android:layout_height="60dp"
@@ -57,6 +67,8 @@
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:cornerRadius="30dp"/>
+
+
 
         </LinearLayout>
     </LinearLayout>
