--- a/app/src/main/res/layout/dialog_fragment.xml
+++ b/app/src/main/res/layout/dialog_fragment.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:text="@string/places"
+        android:text="РТУ МИРЭА"
         android:textColor="@color/lav1"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -21,14 +21,16 @@
         android:id="@+id/iv_image"
         android:layout_width="match_parent"
         android:layout_height="250dp"
-        android:layout_margin="20dp" />
+        android:layout_margin="20dp"
+        android:src="@drawable/mirea"
+        />
 
     <TextView
         android:id="@+id/tv_address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:text="@string/address"
+        android:text="пр.Вернадского, 78"
         android:textColor="@color/lav1"
         android:textSize="30sp" />
 
