--- a/app/src/main/res/layout/dialog_fragment.xml
+++ b/app/src/main/res/layout/dialog_fragment.xml
@@ -31,6 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:text="пр.Вернадского, 78"
+        android:gravity="center"
         android:textColor="@color/lav1"
         android:textSize="30sp" />
 
